2003-05-11  John Levon  <levon@movementarian.org>

	* locate_images.h:
	* locate_images.cpp: extra_images can now use
	relative paths for its search dirs. Move most of 
	the warnings out of find_image_path, and make it
	also handle relative paths. Return the file
	even if it wasn't readable.

	* libpp/partition_files.cpp: give warnings when
	necessary.

	* libpp/profile_spec.h:
	* libpp/profile_spec.cpp: handle relative paths
	inside image specs, as stated in pp_interface; also
	use the extra images search path for resolution.

	* pp/opannotate_options.cpp:
	* pp/opreport_options.cpp:
	* pp/opgprof_options.cpp: changes from above

2003-05-11  John Levon  <levon@movementarian.org>

	* libpp/format_flags.h: source doc improvements

2003-05-11  John Levon  <levon@movementarian.org>

	* libpp/opp_symbol.h: move vma64_p to ...

	* libpp/format_flags.h: ... here

2003-05-11  John Levon  <levon@movementarian.org>

	* libpp/Makefile.am:
	* libpp/outsymbflags.h:
	* libpp/format_flags.h:
	* libpp/profile_container.h:
	* libpp/format_output.h:
	* libpp/format_output.cpp:
	* pp/opreport.cpp: rename outsymbflags to format_flags

2003-05-11  John Levon  <levon@movementarian.org>

	* profile_container.h:
	* profile_container.cpp:
	* opannotate.cpp: clean up select_filename() in a
	similar fashion

2003-05-11  John Levon  <levon@movementarian.org>

	* libpp/profile_container.h:
	* libpp/profile_container.cpp:
	* pp/opreport.cpp:
	* pp/opannotate.cpp:
	* pp/opgprof.cpp: another select_symbols() API cleanup

2003-05-11  John Levon  <levon@movementarian.org>

	* pp/opgprof.cpp: use select_symbols so we can
	handle --threshold

2003-05-11  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/opannotate.cpp: use threshold for source output

2003-05-11  John Levon  <levon@movementarian.org>

	* pp/common_option.h:
	* pp/common_option.cpp:
	* pp/opannotate_options.cpp:
	* pp/opreport_options.cpp: make --threshold
	be a common option.

2003-05-11  John Levon  <levon@movementarian.org>
